# saoping

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/custom_controller_msgs/share/custom_controller_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/custom_controller_msgs/share/custom_controller_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  custom_controller_msgsConfig.cmake  (+15 more)
install/hardware_sim_bridge_test/share/hardware_sim_bridge_test/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/legged_moga_description/share/legged_moga_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/legged_system/include/legged_system/: AnkleSolver.h  LeggedSystem.h  Types.h  utilities.h
install/legged_system/share/legged_system/: legged_system.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rl_controllers/lib/: libonnxruntime.so.1  libonnxruntime.so.1.19.2
install/rl_controllers/lib/pkgconfig/: libonnxruntime.pc
install/rl_controllers/share/rl_controllers/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  rl_controllers.xml
install/yesense_interface/share/yesense_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/yesense_std_ros2/lib/yesense_std_ros2/: yesense_node_publisher  yesense_node_subscriber
install/yesense_std_ros2/share/yesense_std_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/legged_moga/: README.md  kill_ros.bash  run.sh
src/legged_moga/custom_controller_msgs/: CMakeLists.txt  README.md  package.xml
src/legged_moga/hardware_sim_bridge_test/: CMakeLists.txt  QUICK_START.md  README.md  package.xml
src/legged_moga/hardware_sim_bridge_test/config/: domain_bridge.yaml  mock_controllers.yaml  mock_hardware.xacro
src/legged_moga/hardware_sim_bridge_test/launch/: domain_bridge.launch.py  mock_hardware.launch.py
src/legged_moga/hardware_sim_bridge_test/scripts/: start_domain_bridge.sh  start_mock_hardware.sh  start_rl_controller.sh  test_topics.sh
src/legged_moga/legged_moga_description/: BUILD_GUIDE.md  CMakeLists.txt  README.md  package.xml  view_urdf.sh
src/legged_moga/legged_moga_description/config/: gazebo_params.yaml
src/legged_moga/legged_moga_description/launch/: display.launch.py
src/legged_moga/legged_moga_description/meshes/: base_link.STL  head_pitch.STL  head_yaw.STL  left_ankle_pitch.STL  left_ankle_roll.STL  left_elbow_pitch.STL  left_elbow_yaw.STL  left_hip_pitch.STL  left_hip_roll.STL  left_hip_yaw.STL  left_knee_pitch.STL  left_shoulder_pitch.STL  left_shoulder_roll.STL  left_shoulder_yaw.STL  left_wrist_pitch.STL  left_wrist_roll.STL  right_ankle_pitch.STL  right_ankle_roll.STL  right_elbow_pitch.STL  right_elbow_yaw.STL  right_hip_pitch.STL  right_hip_roll.STL  right_hip_yaw.STL  right_knee_pitch.STL  right_shoulder_pitch.STL  right_shoulder_roll.STL  right_shoulder_yaw.STL  right_wrist_pitch.STL  right_wrist_roll.STL  waist_pitch.STL  waist_yaw.STL
src/legged_moga/legged_moga_description/rviz/: moga.rviz
src/legged_moga/legged_moga_description/urdf/: moga.urdf.backup  moga.xacro  moga_8_12_1.urdf  moga_sim.xacro
src/legged_moga/legged_moga_description/worlds/: training_world.world
src/legged_moga/legged_system/: CMakeLists.txt  legged_system.xml  package.xml
src/legged_moga/legged_system/config/: joint_name_params.yaml  joint_params.yaml
src/legged_moga/legged_system/include/: AnkleSolver.h  LeggedSystem.h  utilities.h
src/legged_moga/legged_system/src/: AnkleSolver.cpp  AnkleSolverHelperFunctions.cpp  LeggedSystem.cpp  LeggedSystemHelperFunctions.cpp  utilities.cpp
src/legged_moga/legged_system/src/install/: start_my_ros2_channel.sh
src/legged_moga/legged_system/src/install/cfg/: my_ros2_channel_cfg.yaml
src/legged_moga/plot_juggler/: empty_3x4.xml  moga_ankle_all.xml  moga_ankle_curves.xml  moga_ankle_workspaces.xml  moga_arm_motor_test.xml  moga_arm_position.xml  moga_control_frequency.xml  moga_imu.xml  moga_leg_motor_analysis.xml  moga_leg_position.xml  moga_leg_torque.xml  moga_leg_velocity.xml  moga_leg_velocity2.xml  moga_leg_waist_test.xml  moga_motor_vel_filter.xml  update_specific_file.py
src/legged_moga/rl_controllers/: CMakeLists.txt  package.xml  rl_controllers.xml
src/legged_moga/rl_controllers/config/: joy.yaml  moga_real.yaml  moga_sim.yaml  test_motor.yaml  test_motor_arm.yaml  test_motor_body.yaml  test_motor_chirp_example.yaml
src/legged_moga/rl_controllers/doc/: TEST_MODE_TECHNICAL_GUIDE.md  test_mode_usage.md
src/legged_moga/rl_controllers/include/rl_controllers/: AcController.h  HybridJointHandle.h  RLControllerBase.h  RotationTools.h  utilities.h
src/legged_moga/rl_controllers/launch/: rl_control_real.launch.py  rl_control_sim.launch.py  telelop.launch.py
src/legged_moga/rl_controllers/pkl_data/: interpolated_joint_angles_new_phase.csv  interpolated_joint_angles_new_phase_bias.csv  walk_data_all.csv  walk_data_with_angle_pitch_dof_pos.csv
src/legged_moga/rl_controllers/policy/moga/: model.onnx
src/legged_moga/rl_controllers/scripts/: generate_quadruped_chirp.py  plot_chirp_test.py  plot_latest_chirp.py
src/legged_moga/rl_controllers/src/: AcController.cpp  RLControllerBase.cpp  utilities.cpp
src/legged_moga/yesense_std_ros2/: CMakeLists.txt  package.xml
src/legged_moga/yesense_std_ros2/config/: yesense_config.yaml
src/legged_moga/yesense_std_ros2/launch/: yesense_node.launch.py
src/legged_moga/yesense_std_ros2/src/: yesense_decoder.cpp  yesense_node.cpp
(+565 files in other folders)
