<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hardware_sim_bridge_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hang.li@bridgedp.com">bridge</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control_test_assets</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>domain_bridge</depend>
  <depend>xacro</depend>
  <depend>sensor_msgs</depend>
  
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
